--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ books
     <div class="container">
         <div class="row">
             <div class="col-md-4 text-center">
-                <img src="/img/img1.jfif" class="bd-placeholder-img rounded-circle" width="140" height="140" />
+                <img src="img/img1.jfif" class="bd-placeholder-img rounded-circle" width="140" height="140" />
                 <h2>Buy Crayons in Delhi</h2>
                 <p>
                     A selection of colorful crayons
